order/order-deployment.yml
# Berisi instruksi dari versi apps/v1 Kubernetes API mana yang harus digunakan untuk membuat object dari manifest.
apiVersion: apps/v1
# Jenis object yang digunakan yaitu Deployment.
kind: Deployment
# Sekumpulan data yang memberikan informasi tentang data lain.
metadata:
  # Berisi nama Deployment yaitu order-deployment.
  name: order-deployment
  # Berisi labels dengan key app dan value order.
  labels:
    app: order
# Berisi spesifikasi object.
spec:
  # Membuat replica pod sebanyak 1.
  replicas: 1
  # Menggunakan matchLabels app: order.
  selector:
    matchLabels:
      app: order
  # Berisi metadata dan spec.
  template:
    metadata:
      # Berisi labels dengan key app dan value order.
      labels:
        app: order
    spec:
      # Membuat container sebelum container yang lain dibuat.
      containers:
      # Nama container order.
      - name: order
        # Image container ghcr.io/stevensama73/order:latest.
        image: ghcr.io/stevensama73/order:latest
        # Menggunakan container port 3000.
        ports:
          - containerPort: 3000
